--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,51 @@
+# Python
 __pycache__/
-db/__pycache__/
-gcal_integration/__pycache__/
-gui/__pycache__/
-pdf/__pycache__/
-utils/__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-credentials.json
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Application specific
+*.db
+*.log
+*.pickle
 token.pickle
+credentials.json
 app.log
+test.log
+test_app.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific
+multas/
+*.pdf
